--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.650.0",
     "@gomomento/sdk": "^1.98.1"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-s3": "^3.651.1"
   }
 }
